# docs/api/swagger.v1.json
@@ -2868,6 +2868,16 @@
           "401": {
             "description": "Unauthorized"
           },
+          "403": {
+            "description": "Forbidden",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          },
           "400": {
             "description": "Bad Request",
             "content": {
@@ -7774,6 +7784,10 @@
             "nullable": true
           },
           "novaSenha": {
+            "type": "string",
+            "nullable": true
+          },
+          "codigoTotp": {
             "type": "string",
             "nullable": true
           }
